fix: bind checker UI to loopback